# PeriSci

./: .clang-format  .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.en.md  README.md  VERSIONING.md
api/: CMakeLists.txt
api/include/perisci/api/: api.hpp  config_schema.hpp  export_dataset.hpp  run_case.hpp  run_poisson_basic.hpp  run_report.hpp  types.hpp  validate_case.hpp
api/src/: api_stub.cpp  config_schema_stub.cpp  export_dataset_stub.cpp  run_case_stub.cpp  run_poisson_basic.cpp  run_report_stub.cpp  validate_case_stub.cpp
apps/: .gitkeep  CMakeLists.txt  perisci_export_main.cpp  perisci_run_main.cpp  perisci_validate_main.cpp
cases/: CASE_WORKFLOW.md  CI_GATES.md  README.md
cases/_template/: README.md  expected.json  input.json  notes.md
cases/case-00-minimal/: README.md  input.json  notes.md
core/: .gitkeep  CMakeLists.txt
core/include/perisci/core/: assembly.hpp  boundary.hpp  linear_algebra.hpp  material.hpp  mesh.hpp  solver.hpp  version.hpp
core/src/: assembly.cpp  boundary.cpp  core_stub.cpp  linear_algebra.cpp  material_stub.cpp  mesh.cpp  mesh_stub.cpp  solver.cpp  solver_stub.cpp
docs/: ARCHITECTURE.md  CODING_GUIDE.md  DESIGN_CONTRACT.md  ROADMAP.md  References.md
docs/adr/: 0000-template.md  0001-windows-ninja-single-config.md  0002-introduce-canonical-cases-directory.md  README.md
docs/releases/: README.md  v0.1.5-checklist.md  v0.2.0-checklist.md
docs/specs/: api-contract.md  config-schema.md  consistency_matrix.md  dataset-spec.md  header_naming.md  stub_conventions.md
examples/: README.md
examples/ex-00-hello/: CMakeLists.txt  README.md  hello.cpp
examples/ex-01-config-basics/: CMakeLists.txt  README.md  config_basics.cpp
examples/ex-01-minimal-run/: README.md
examples/ex-02-dataset-export/: CMakeLists.txt  README.md  dataset_export.cpp
examples/ex-03-poisson-basic/: CMakeLists.txt  README.md  poisson_basic.cpp
examples/hello/: CMakeLists.txt  README.md  hello.cpp
examples/minimal_case/: README.md  expected.json
python/: README.md
python/perisci/: __init__.py  __main__.py  _cli.py  cli.py  dataset.py  export.py  run.py  validate.py
tests/: CMakeLists.txt  test_build.cpp  test_case_00_regression.cpp  test_cli_boundaries.cpp  test_common_functions.cpp  test_common_functions.hpp  test_dataset_manifest.cpp  test_run_case_smoke.cpp  test_schema_validation.cpp
